traversal.snake.Snake.scala.error
Compilation error:
Snake:8: error: value avance is not a member of Unit
  avance(6) ;droite(); avance(); droite() avance(6)}
                                          ^